--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/reactstrap": "^8.4.2",
+    "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-icons": "^3.9.0",
     "react-scripts": "3.4.0",
+    "reactstrap": "^8.4.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
