--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "resolutions": {
+    "**/**/acorn": "^5.7.4"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
